<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clueless</string>
    <string name="skiplogin">Skip (smoke and mirrors)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    
    <!-- ***** ROOMS ***** -->
    <string name="roomlist">Room</string>
    <string name="Lounge"><b>LOUNGE</b></string>
    <string name="Dining_Room"><b>DINING ROOM</b></string>
    <string name="Kitchen"><b>KITCHEN</b></string>
    <string name="Hall"><b>HALL</b></string>
    <string name="Billiard_Room"><b>BILLIARD ROOM</b></string>
    <string name="Ballroom"><b>BALLROOM</b></string>
    <string name="Study"><b>STUDY</b></string>
    <string name="Library"><b>LIBRARY</b></string>
    <string name="Conservatory"><b>CONSERVATORY</b></string>
    
    <string name="Width">125dp</string>
    <string name="Height">125dp</string>
    <string name="font_size">12sp</string>
    <string name="Make_A_Suggestion">Suggest!</string>
    <string name="Make_An_Accusation">Accuse!</string>
    <string name="End_Turn">End!</string>
    <string name="suspects">WHO DID IT?</string>
    <string name="weapon">WITH WHAT WEAPON?</string>
    <string name="rooms">IN WHICH ROOM?</string>
    <string name="hand">YOUR HAND</string>
    <string name="Cards">card</string>
    <string name="title_activity_watch_match_test">WatchMatchTestActivity</string>
    <string name="findmatch">Find Match</string>
   
    <!-- ***** WEAPONS ***** -->
    <string name="weaponlist">Weapon</string>
    <string name="candlestick">Candlestick</string>
    <string name="knife">Knife</string>
    <string name="lead_pipe">Lead Pipe</string>
    <string name="revolver">Revolver</string>
    <string name="rope">Rope</string>
    <string name="wrench">Wrench</string>
    
    <!-- ***** SUSPECTS ***** -->
    <string name="suspectlist">Suspect</string>
    <string name="green">Mr. Green</string>
    <string name="mustard">Col. Mustard</string>
    <string name="peacock">Mrs. Peacock</string>
    <string name="plum">Prof. Plum</string>
    <string name="scarlett">Ms. Scarlett</string>
    <string name="white">Mrs. White</string>

</resources>