<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".PlayGameActivity" >

    <Button
        android:id="@+id/Button01"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/Button05"
        android:background="@drawable/hall2"
    />

    <Button
        android:id="@+id/Button03"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/Button01"
        android:background="@drawable/ballroom2"
    />

    <Button
        android:id="@+id/Button02"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignLeft="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:layout_marginTop="30dp"
        android:background="@drawable/billiard_room2"
    />

    <Button
        android:id="@+id/button1"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/Button01"
        android:background="@drawable/lounge2"
     />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="30dp"
        android:background="@drawable/kitchen2"
	/>

    <Button
        android:id="@+id/Button04"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignBaseline="@+id/Button03"
        android:layout_alignBottom="@+id/Button03"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="483dp"
        android:background="@drawable/conservatory2"
    />

    <Button
        android:id="@+id/Button06"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignBaseline="@+id/Button02"
        android:layout_alignBottom="@+id/Button02"
        android:layout_alignLeft="@+id/Button04"
        android:background="@drawable/library2"
     />

    <Button
        android:id="@+id/Button05"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignLeft="@+id/Button06"
        android:layout_alignParentTop="true"
        android:background="@drawable/study2"
     />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignBaseline="@+id/Button02"
        android:layout_alignBottom="@+id/Button02"
        android:layout_alignLeft="@+id/button1"
        android:background="@drawable/dining_room2"
     />

    <Button
        android:id="@+id/DiningToBilliard"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/KitchenToBallroom"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_toLeftOf="@+id/button3"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/HallToStudy"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_toRightOf="@+id/Button05"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/BilliardToLibrary"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/Button02"
        android:layout_alignBottom="@+id/Button02"
        android:layout_toLeftOf="@+id/Button02"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/BallroomToConservatory"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/Button03"
        android:layout_alignBottom="@+id/Button03"
        android:layout_toLeftOf="@+id/Button03"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/StudyToLibrary"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/Button06"
        android:layout_alignRight="@+id/Button06"
        android:layout_marginRight="46dp"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/BilliardToBallroom"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/Button02"
        android:layout_below="@+id/Button02"
        android:layout_marginRight="45dp"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/DiningToKitchen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginRight="44dp"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/LoungeToDining"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/DiningToKitchen"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/HallToBilliard"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/BilliardToBallroom"
        android:layout_below="@+id/Button01"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/LibraryToConservatory"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/StudyToLibrary"
        android:layout_below="@+id/Button06"
        android:background="@color/hallway_color" />

    <Button
        android:id="@+id/LoungeToHall"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_toRightOf="@+id/Button01"
        android:background="@color/hallway_color" />

    <TextView
        android:id="@+id/clue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/Button05"
        android:text="@string/Clue"
        android:textSize="20sp"
        android:textStyle="bold" 
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/blue"/>
    
    <Button
        android:id="@+id/Make_An_Accusation"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mr_green"
        android:layout_marginRight="15dp"
        android:text="@string/Make_An_Accusation" />

    <RadioGroup
        android:layout_width="480dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/clue_text" >

        <RadioButton
            android:id="@+id/miss_scarlett"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/miss_scarlett" />

        <RadioButton
            android:id="@+id/prof_plum"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/prof_plum" />

        <RadioButton
            android:id="@+id/mrs_peacock"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/mrs_peacock" />

        <RadioButton
            android:id="@+id/mr_green"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/mr_green" />

        <RadioButton
            android:id="@+id/col_mustard"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/col_mustard" />

        <RadioButton
            android:id="@+id/mrs_white"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/mrs_white" />
    </RadioGroup>

    <Button
        android:id="@+id/Make_A_Suggestion"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="44dp"
        android:layout_toRightOf="@+id/Make_An_Accusation"
        android:text="@string/Make_A_Suggestion" />

    <Button
        android:id="@+id/End_Turn"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/clue_text"
        android:text="@string/End_Turn" />

</RelativeLayout>